--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-Elwin bassaget L2 Projet jeu Hex
+Elwin bassaget Projet Jeu de plateau Hex.
+Pour jouer Ã  ce jeu rien de plus simple, dans le menu cliquer sur "Play a new Game ".
 
-Pour jouer à ce jeu rien de plus simple, dans le menu cliquer sur "Play a new Game ".
+Le but du jeu est de crÃ©er un pont de couleur entre les deux extrÃ©mitÃ© respective! Le premier qui rÃ©ussit Ã  le faire gagne.
 
-Le but du jeu est de créer un pont de couleur entre les deux extrémité respective! Le premier qui réussit à le faire gagne.
-
- Une fois la partie gagné on peut facilement relancer une nouvelle partie ou bien on peut simplement quitter.
+ Une fois la partie gagnÃ© on peut facilement relancer une nouvelle partie ou bien on peut simplement quitter.
